--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "clinicaDental",
+  "name": "clinicadental",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/robergeekhub/clinicaDental/issues"
   },
-  "homepage": "https://github.com/robergeekhub/clinicaDental#readme"
+  "homepage": "https://github.com/robergeekhub/clinicaDental#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "mongoose": "^5.10.9"
+  }
 }
